--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
     -->
     <title>React App</title>
   </head>
-  <body style="background-color: #f5fff5">
+  <body style="background-color: #f5fff5; margin: 0px">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
